// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application loads asynchronously loads in the welcome screen asynchronously 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <p>
    {
      "StarWars": {
        "name": "Yoda"
      }
    }
  </p>
  <div>
    <h1>
      Connection testing field
    </h1>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application loads asynchronously starts of empty 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application start file Logs in users by token 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <h1>
      Connection testing field
    </h1>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <h1>
      Star Wars login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application start file Removes the welcome screen on logout 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <h1>
      Connection testing field
    </h1>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <h1>
      Star Wars login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application start file Renders the welcome screen on login 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <p>
    {
      "StarWars": {
        "name": "Yoda"
      }
    }
  </p>
  <div>
    <h1>
      Connection testing field
    </h1>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <h1>
      Star Wars user logged in!
    </h1>
    <p>
      You're logged in as 
      Yoda
    </p>
    <button
      alternative={true}
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;

exports[`Application start file renders without crashing 1`] = `
<div>
  <title>
    AuthJazz
  </title>
  <div>
    <h1>
      Connection testing field
    </h1>
    <button
      alternative={true}
      onClick={[Function]}
      outlined={true}
    >
      Click to ping
    </button>
  </div>
  <div>
    <h1>
      Star Wars login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <div>
    <h1>
      Star Wars Characters login
    </h1>
    <p>
      Please log in
    </p>
    <form
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="StarWarsCharactersusername"
          required={false}
        >
          Username
        </label>
        <input
          id="StarWarsCharactersusername"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          value=""
        />
      </div>
      <div>
        <label
          htmlFor="StarWarsCharacterspassword"
          required={false}
        >
          Password
        </label>
        <input
          id="StarWarsCharacterspassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        disabled={true}
      >
        Form fields not valid
      </button>
    </form>
  </div>
  <p>
    What follows is an iframe, the colors are different to illustrate that we're accessing a different website
  </p>
  <div
    src="http://localhost:4050"
    title="application_display"
  />
</div>
`;
